--- a/1_FGF_FGFR_classification.ipynb
+++ b/1_FGF_FGFR_classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNHsaguu2QKqjbntsMyoDPV",
+      "authorship_tag": "ABX9TyPmJNQS4NyANGdFvVHHPBlq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "cell_type": "markdown",
       "source": [
         "# FGF and FGFR classificaiton using ProtBert\n",
-        "## dataset source: Sebrina \n",
+        "## dataset source: Sabrina \n",
         "## Code: Bo Ni @ cambridge, Apr 2022"
       ],
       "metadata": {
