--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRahQK2n69kDHFR8XH7WI+",
+      "authorship_tag": "ABX9TyPmJv87xdTV7RGpc7kLwtUX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gz__7VZa6WBm",
-        "outputId": "cc566cdc-1377-4540-c536-0aa844d20112"
+        "outputId": "1b14772a-8989-4663-ea55-a5946c5ecd12"
       },
       "outputs": [
         {
@@ -58,7 +58,7 @@
             "📦 Installing...\n",
             "📌 Adjusting configuration...\n",
             "🩹 Patching environment...\n",
-            "⏲ Done in 0:00:30\n",
+            "⏲ Done in 0:00:34\n",
             "🔁 Restarting kernel...\n"
           ]
         }
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VTM8OhoL7CSm",
-        "outputId": "de2278cd-9d24-4c77-f46f-5ea6c7892e9d"
+        "outputId": "eb7f2ec1-4685-45e5-8948-3da79f352412"
       },
       "execution_count": 1,
       "outputs": [
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "c-gvQegy7Ni6"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "aeLz4CFK7VpX"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -146,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBYm0tCH7ZNR",
-        "outputId": "5de7e02c-fc8e-4be4-8a8d-603ce3dc2794"
+        "outputId": "e7025523-e51d-4b79-92e5-98ac791d169b"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,11 +190,8 @@
             "\n",
             "Downloading and Extracting Packages\n",
             "\n",
-            "dssp-2.2.1           | 4.1 MB    |            |   0% \n",
-            "dssp-2.2.1           | 4.1 MB    | ########## | 100% \n",
-            "dssp-2.2.1           | 4.1 MB    | ########## | 100% \n",
-            "\n",
             "certifi-2021.10.8    | 145 KB    |            |   0% \n",
+            "certifi-2021.10.8    | 145 KB    | #1         |  11% \n",
             "certifi-2021.10.8    | 145 KB    | ########## | 100% \n",
             "\n",
             "ca-certificates-2021 | 139 KB    |            |   0% \n",
@@ -203,6 +200,10 @@
             "conda-4.12.0         | 1.0 MB    |            |   0% \n",
             "conda-4.12.0         | 1.0 MB    | ########## | 100% \n",
             "conda-4.12.0         | 1.0 MB    | ########## | 100% \n",
+            "\n",
+            "dssp-2.2.1           | 4.1 MB    |            |   0% \n",
+            "dssp-2.2.1           | 4.1 MB    | ########## | 100% \n",
+            "dssp-2.2.1           | 4.1 MB    | ########## | 100% \n",
             "Preparing transaction: ...working... done\n",
             "Verifying transaction: ...working... done\n",
             "Executing transaction: ...working... done\n",
@@ -253,41 +254,43 @@
             "\n",
             "Downloading and Extracting Packages\n",
             "\n",
-            "liblapack-3.9.0      | 11 KB     |            |   0% \n",
-            "liblapack-3.9.0      | 11 KB     | ########## | 100% \n",
-            "liblapack-3.9.0      | 11 KB     | ########## | 100% \n",
+            "libgfortran-ng-11.2. | 23 KB     |            |   0% \n",
+            "libgfortran-ng-11.2. | 23 KB     | #######1   |  71% \n",
+            "libgfortran-ng-11.2. | 23 KB     | ########## | 100% \n",
             "\n",
-            "libcblas-3.9.0       | 11 KB     |            |   0% \n",
-            "libcblas-3.9.0       | 11 KB     | ########## | 100% \n",
+            "numpy-1.20.3         | 5.7 MB    |            |   0% \n",
+            "numpy-1.20.3         | 5.7 MB    |            |   0% \n",
+            "numpy-1.20.3         | 5.7 MB    | #####      |  50% \n",
+            "numpy-1.20.3         | 5.7 MB    | ########## | 100% \n",
+            "numpy-1.20.3         | 5.7 MB    | ########## | 100% \n",
+            "\n",
+            "libgfortran5-11.2.0  | 1.7 MB    |            |   0% \n",
+            "libgfortran5-11.2.0  | 1.7 MB    | #########8 |  98% \n",
+            "libgfortran5-11.2.0  | 1.7 MB    | ########## | 100% \n",
             "\n",
             "libopenblas-0.3.17   | 9.2 MB    |            |   0% \n",
-            "libopenblas-0.3.17   | 9.2 MB    | 3          |   3% \n",
-            "libopenblas-0.3.17   | 9.2 MB    | ########2  |  82% \n",
+            "libopenblas-0.3.17   | 9.2 MB    | ##3        |  24% \n",
+            "libopenblas-0.3.17   | 9.2 MB    | ######6    |  66% \n",
+            "libopenblas-0.3.17   | 9.2 MB    | ########## | 100% \n",
             "libopenblas-0.3.17   | 9.2 MB    | ########## | 100% \n",
             "\n",
-            "biopython-1.79       | 2.6 MB    |            |   0% \n",
-            "biopython-1.79       | 2.6 MB    | #5         |  15% \n",
-            "biopython-1.79       | 2.6 MB    | ########## | 100% \n",
-            "biopython-1.79       | 2.6 MB    | ########## | 100% \n",
-            "\n",
-            "python_abi-3.7       | 4 KB      |            |   0% \n",
-            "python_abi-3.7       | 4 KB      | ########## | 100% \n",
+            "liblapack-3.9.0      | 11 KB     |            |   0% \n",
+            "liblapack-3.9.0      | 11 KB     | ########## | 100% \n",
             "\n",
             "libblas-3.9.0        | 12 KB     |            |   0% \n",
             "libblas-3.9.0        | 12 KB     | ########## | 100% \n",
             "\n",
-            "libgfortran5-11.2.0  | 1.7 MB    |            |   0% \n",
-            "libgfortran5-11.2.0  | 1.7 MB    | ########## | 100% \n",
-            "libgfortran5-11.2.0  | 1.7 MB    | ########## | 100% \n",
+            "libcblas-3.9.0       | 11 KB     |            |   0% \n",
+            "libcblas-3.9.0       | 11 KB     | ########## | 100% \n",
             "\n",
-            "libgfortran-ng-11.2. | 23 KB     |            |   0% \n",
-            "libgfortran-ng-11.2. | 23 KB     | ########## | 100% \n",
+            "python_abi-3.7       | 4 KB      |            |   0% \n",
+            "python_abi-3.7       | 4 KB      | ########## | 100% \n",
+            "python_abi-3.7       | 4 KB      | ########## | 100% \n",
             "\n",
-            "numpy-1.20.3         | 5.7 MB    |            |   0% \n",
-            "numpy-1.20.3         | 5.7 MB    | ##2        |  23% \n",
-            "numpy-1.20.3         | 5.7 MB    | #####6     |  56% \n",
-            "numpy-1.20.3         | 5.7 MB    | ########## | 100% \n",
-            "numpy-1.20.3         | 5.7 MB    | ########## | 100% \n",
+            "biopython-1.79       | 2.6 MB    |            |   0% \n",
+            "biopython-1.79       | 2.6 MB    |            |   1% \n",
+            "biopython-1.79       | 2.6 MB    | ########## | 100% \n",
+            "biopython-1.79       | 2.6 MB    | ########## | 100% \n",
             "Preparing transaction: ...working... done\n",
             "Verifying transaction: ...working... done\n",
             "Executing transaction: ...working... done\n",
@@ -318,21 +321,23 @@
         "    # PDB: https://files.rcsb.org/download/4BWD.pdb\n",
         "    print(os.popen('wget https://files.rcsb.org/download/4BWD.pdb').read())\n",
         "    # with chain break\n",
-        "    print(os.popen('wget https://files.rcsb.org/download/1YYJ.pdb').read())\n"
+        "    print(os.popen('wget https://files.rcsb.org/download/1YYJ.pdb').read())\n",
+        "    print(os.popen('wget https://files.rcsb.org/download/7ZC3.pdb').read())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSWJHgjx7cwG",
-        "outputId": "403077a1-5882-42f3-c33e-812f6936a4d9"
+        "outputId": "416bec56-c437-4887-dbc6-23c4481416ed"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
             "\n",
             "\n",
             "\n"
@@ -343,6 +348,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# self-made DSSP file\n",
         "print(os.popen('wget https://www.dropbox.com/s/6w1v7euvdd01i7f/DSSP_SelfMade.py').read())"
       ],
       "metadata": {
@@ -350,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Nmc_uMyvQGj",
-        "outputId": "50b8e77e-6a7d-4c24-c534-bf57fc72759a"
+        "outputId": "f3ac3bee-7035-409e-967c-15a277dda96a"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +389,7 @@
       "metadata": {
         "id": "FFfpILCZ79Yx"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -395,7 +401,7 @@
       "metadata": {
         "id": "awonL8Nd8SEG"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -409,9 +415,9 @@
           "height": 35
         },
         "id": "rj77l6jlzDFT",
-        "outputId": "a724c6ed-be7e-4e72-8ecc-b877db26c12f"
+        "outputId": "c7a81478-ec93-480b-d6ca-e40a25b27ba2"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +430,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 10
         }
       ]
     },
@@ -440,16 +446,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R9aIM-8Y-Re1",
-        "outputId": "9076f720-739c-45ea-888a-fee2676fd9a3"
+        "outputId": "782849af-9361-4208-81d9-755e0bc94579"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1YYJ.pdb  AF-Q47125-F1-model_v2.pdb  DSSP_SelfMade.py  Result.txt\n",
-            "4BWD.pdb  condacolab_install.log     __pycache__       sample_data\n"
+            "1YYJ.pdb  7ZC3.pdb\t\t     condacolab_install.log  sample_data\n",
+            "4BWD.pdb  AF-Q47125-F1-model_v2.pdb  DSSP_SelfMade.py\n"
           ]
         }
       ]
@@ -464,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kTVYksd9C8NY",
-        "outputId": "e3feee1e-c6db-411a-94ff-db3d4102aae0"
+        "outputId": "297ae691-0a48-4c4f-cc03-e4508795267f"
       },
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,8 +487,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# retrival py\n",
-        "!cp /usr/local/lib/python3.7/site-packages/Bio/PDB/DSSP_SelfMade.py ./"
+        "# # retrival py\n",
+        "# !cp /usr/local/lib/python3.7/site-packages/Bio/PDB/DSSP_SelfMade.py ./"
       ],
       "metadata": {
         "id": "fCG8Lfy2s1Lp"
@@ -521,7 +527,7 @@
       "metadata": {
         "id": "R6Ymwcz9DAn7"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -593,7 +599,7 @@
       "metadata": {
         "id": "mP1t8DkB8VFg"
       },
-      "execution_count": 45,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -614,7 +620,7 @@
       "metadata": {
         "id": "650sOCK6K_lE"
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -744,7 +750,7 @@
       "metadata": {
         "id": "XNDBafZ5Hyrs"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -754,12 +760,15 @@
         "pdb_name = \"4BWD\"\n",
         "pdb_file = './4BWD.pdb'\n",
         "\n",
+        "pdb_name = \"7ZC3\"\n",
+        "pdb_file = './7ZC3.pdb'\n",
+        "\n",
         "ou_file = './Result.txt'"
       ],
       "metadata": {
         "id": "05Y-ut1s8i8y"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -774,19 +783,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RNL5nkooQriT",
-        "outputId": "21aa0d5b-88f3-4d71-97e0-bb9138d24171"
+        "outputId": "242dd543-8e2b-4bb9-eefb-a93e7f9b8817"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 1795.\n",
+            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 1412.\n",
             "  PDBConstructionWarning,\n",
-            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 1815.\n",
+            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 1433.\n",
             "  PDBConstructionWarning,\n",
-            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 1834.\n",
+            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 1443.\n",
+            "  PDBConstructionWarning,\n",
+            "/usr/local/lib/python3.7/site-packages/Bio/PDB/StructureBuilder.py:92: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 1508.\n",
             "  PDBConstructionWarning,\n"
           ]
         }
